# roommate

./: .gitignore  .gitmodules  CMakeLists.bak  CMakeLists.txt  Makefile  README.md  build.sh  building.md  sdkconfig.defaults  sdkconfig.my.defaults  task_definitions.md  updating-freertos.md
.circleci/: config.yml
components/roommate_main/: CMakeLists.txt  led_control_notes.md
components/roommate_main/include/: app_state.h  button_task.h  calendar_event.h  colors.h  led_control.h  led_control_hw.h  roommate_main.h
components/roommate_main/src/: aws_event_coordinator.c  experiments_task.c  led_sequence.c  mqtt_agent_manager.c  roommate_main.c  time_utils.c
config_files/: FreeRTOSConfig.h
freertos/: component.mk
freertos-common-component/: component.mk
freertos-common-component/include/: aws_clientcredential.h  aws_clientcredential_keys.h
hello/: main.c
make/: Makefile  sdkconfig  sdkconfig.old
new-project/: Makefile  sdkconfig
src/: aws_event_coordinator.c  button_task.c  button_task.h  cal_util.c  component.mk  experiments_task.c  led_control.c  led_control_hw.c  led_control_old.c  led_cycle_task.c  led_sequence.c  led_utils.c  main.c  mqtt_agent_manager.c  notes.md  roommate.c  roommate_main.c  time_utils.c
src/include/: app_state.h  aws_event_coordinator.h  button_task.h  cal_util.h  calendar_event.h  colors.h  experiments_task.h  iot_network_manager_private.h  led_control.h  led_control_hw.h  led_control_old.h  led_cycle_task.h  led_sequence.h  led_utils.h  mqtt_agent_manager.h  mqtt_event_group_flags.h  roommate.h  roommate_main.h  roommate_pinout.h  time_utils.h
test/: Makefile  all_tests.out
test/fake_headers/: FreeRTOS.h
test/test_src/: cal_util_tests.c  calendar_event_processing_tests.c  led_logic_tests.c  led_sequence_tests.c
test/test_src/test_runners/: all_tests.c  cal_util_runner.c  calendar_event_processing_runner.c  led_logic_runner.c  led_sequence_runner.c
